--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,15 @@
     "api/index.php": {
       "runtime": "vercel-php@0.4.0"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api",
+      "headers": {
+        "cache-control": "no-cache, no-store, must-revalidate",
+        "Access-Control-Allow-Origin": "*"
+      },
+      "dest": "/api"
+    }
+  ]
 }
